@@ -1,5 +1,13 @@
 2011-12-07  Kaz Kylheku  <kaz@kylheku.com>
 
+	* eval.c (eval_init): New functions registered as intrinsics.
+
+	* lib.c (chr_toupper, chr_tolower): New functions.
+
+	* lib.h (chr_toupper, chr_tolower): New functions declared.
+
+2011-12-07  Kaz Kylheku  <kaz@kylheku.com>
+
 	* parser.l: In the CHRLIT state, return a nonblank character as an
 	IDENT token. This allows for character literals like #\$.
 
